# context_engineering

./: .gitignore  README.md  pyproject.toml  requirements.txt
context_engineering/: 1_write_context.ipynb  2_select_context.ipynb  3_compress_context.ipynb  4_isolate_context.ipynb  utils.py
docs/: aws_rag_chat_app.csv  notebook-1-guide.md  notebook-2-guide.md  notebook-3-guide.md  notebook-4-guide.md  overview-guide.md
